[workspace.package]
version = "0.1.6"
description = "Relentless HTTP load testing / comparison testing tool"
authors = ["hayas1 <h4ystack@gmail.com>"]
edition = "2021"
repository = "https://github.com/hayas1/relentless"
license-file = "LICENSE"
readme = "README.md"

[package]
name = "relentless"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["full"]
full = ["json", "yaml", "toml", "cli"]

json = ["serde_json", "json-patch", "jsonptr"]
yaml = ["serde_yaml"]
cli = ["clap", "console-report"]
console-report = ["console"]


[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
# tokio-stream = "0.1.17" # TODO map of tokio-stream may not collect as Vec<T>Item (it reduce Vec<Future>), so use futures
futures = "0.3.31"
tower = { version = "0.5.2", features = ["timeout", "util"] }
http = "1.2.0"
http-serde = "2.1.1"
bytes = "1.9.0"

thiserror = "2.0.11"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.19", optional = true }
json-patch = { version = "3.0.1", optional = true }
jsonptr = { version = "0.6.3", optional = true }

clap = { version = "4.5.26", features = ["derive"], optional = true }
console = { version = "0.15.10", optional = true }
nom = "7.1.3"
# average = "0.15.1" # Quantile (that use p2 algorithm) do not impl Extend
hdrhistogram = "7.5.4"


[dev-dependencies]
relentless-dev-server-http = { path = "dev/server/http" }
axum = "0.8.1"
glob = "0.3.2"
httptest = "0.16.1"
http-body-util = "0.1.2"
assert-json-diff = "2.0.2"
serde_json = "1.0.135"
indoc = "2.0.5"

[workspace]
members = [
    "implement/grpc",
    "implement/http",
    "dev/server/grpc",
    "dev/server/http",
]

[badges]
github = { repository = "hayas1/relentless", workflow = "Master" }
maintenance = { status = "experimental" }
