[workspace.package]
version = "0.1.6"
description = "Relentless HTTP / GRPC comparison testing tool"
authors = ["hayas1 <h4ystack@gmail.com>"]
edition = "2021"
repository = "https://github.com/hayas1/relentless"
license-file = "LICENSE"
readme = "README.md"

[workspace]
members = [
    "relentless",
    "relentless-grpc",
    "relentless-http",
    "dev/server/grpc",
    "dev/server/http",
]
