[workspace.package]
version = "0.2.0"
description = "Relentless load testing / comparison testing framework"
authors = ["hayas1 <h4ystack@gmail.com>"]
edition = "2021"
repository = "https://github.com/hayas1/relentless"
license-file = "LICENSE"
readme = "README.md"

[workspace]
members = [
    "relentless",
    "relentless-grpc",
    "relentless-http",
    "dev/server/graphql",
    "dev/server/grpc",
    "dev/server/http",
]
