[package]
name = "relentless-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["full"]
full = ["relentless/full", "yaml", "toml", "cli"]

yaml = ["relentless/yaml", "serde_yaml"]
toml = ["relentless/toml"]
cli = ["relentless/cli", "console-report"]
console-report = ["relentless/console-report"]

[dependencies]
relentless = { path = "../relentless", features = ["json"] }

tower = "0.5.2"
tokio = { version = "1.45.1", features = ["full"] }
http = "1.3.1"
prost = "0.13.0"
prost-types = "0.13.0"
prost-build = "0.13.0"
prost-reflect = { version = "0.15.3", features = [
    "serde",
] } # https://github.com/hyperium/tonic/issues/2028
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tracing = "0.1.43"
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.0"

bytes = "1.10.1"
futures = "0.3.31"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34", optional = true }
# semigroup = { version = "0.4.3", features = ["derive"] }
semigroup = { git = "https://github.com/hayas1/semigroup.git", branch = "master", features = [
    "derive",
    "monoid",
    "histogram",
    "async",
] }


[dev-dependencies]
relentless-grpc-dev-server = { path = "../dev/server/grpc" }
glob = "0.3.3"
tokio-test = "0.4.4"                                         # for async doc test
