[package]
name = "relentless-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["full"]
full = ["relentless/full", "yaml", "toml", "cli"]

yaml = ["relentless/yaml", "serde_yaml"]
toml = ["relentless/toml"]
cli = ["relentless/cli", "console-report"]
console-report = ["relentless/console-report"]

[dependencies]
relentless = { path = "../relentless", features = ["json"] }

tower = "0.5.2"
tokio = { version = "1.49.0", features = ["full"] }
http = "1.4.0"
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"
prost-reflect = { version = "0.16.3", features = [
    "serde",
] } # https://github.com/hyperium/tonic/issues/2028
tonic = "0.13.1"
tonic-reflection = "0.13.1"
http-body-util = "0.1.3" # TODO only record
relentless-http = { path = "../relentless-http" } # TODO only record

bytes = "1.11.0"
futures = "0.3.31"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = { version = "0.9.34", optional = true }

[dev-dependencies]
relentless-grpc-dev-server = { path = "../dev/server/grpc" }
tokio-test = "0.4.5"                                         # for async doc test
