[package]
name = "relentless-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["full"]
full = ["relentless/full", "yaml", "cli"]

yaml = ["relentless/yaml", "serde_yaml"]
cli = ["relentless/cli", "console-report"]
console-report = ["relentless/console-report"]

[dependencies]
relentless = { path = "../relentless", features = ["json"] }

tower = "0.5.2"
tokio = { version = "1.45.1", features = ["full"] }
http = "1.3.1"
prost = "0.14.3"
prost-types = "0.14.3"
prost-build = "0.14.3"
prost-reflect = { version = "0.16.3", features = [
    "serde",
] } # https://github.com/hyperium/tonic/issues/2028
tonic = "0.14.5"
tonic-reflection = "0.14.5"
tracing = "0.1.43"
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.0"

bytes = "1.10.1"
futures = "0.3.31"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34", optional = true }
semigroup = { version = "0.5.0", features = [
    "derive",
    "monoid",
    "histogram",
    "async",
] }


[dev-dependencies]
relentless-grpc-dev-server = { path = "../dev/server/grpc" }
glob = "0.3.3"
tokio-test = "0.4.4"                                         # for async doc test
