[package]
name = "relentless-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["full"]
full = ["relentless/full", "json", "yaml", "toml", "default-http-client", "cli"]

json = ["relentless/json", "serde_json"]
yaml = ["serde_yaml"]
toml = ["relentless/toml"]
default-http-client = ["reqwest"]
cli = ["relentless/cli", "console-report"]
console-report = ["relentless/console-report"]

[dependencies]
relentless = { path = "../relentless" }

tower = "0.5.2"
tokio = { version = "1.44.0", features = ["full"] }
http = "1.2.0"
http-serde = "2.1.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
mime = "0.3.17"
reqwest = { version = "0.12.12", optional = true }

bytes = "1.10.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
serde_yaml = { version = "0.9.34", optional = true }

[dev-dependencies]
relentless-http-dev-server = { path = "../dev/server/http" }
axum = "0.8.1"
glob = "0.3.2"
assert-json-diff = "2.0.2"
httptest = "0.16.3"
indoc = "2.0.6"
tokio-test = "0.4.4"                                         # for async doc test
