[package]
name = "relentless-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["full"]
full = ["relentless/full", "yaml", "cli"]

yaml = ["serde_yaml"]
cli = ["relentless/cli", "console-report"]
console-report = ["relentless/console-report"]

[dependencies]
relentless = { path = "../relentless" }

tower = "0.5.2"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
http = "1.3.1"
http-serde = "2.1.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
reqwest = "0.12.15"
tracing = "0.1.43"
opentelemetry-http = "0.31.0"

bytes = "1.10.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34", optional = true }
# semigroup = { version = "0.4.3", features = ["derive"] }
semigroup = { git = "https://github.com/hayas1/semigroup.git", branch = "master", features = [
    "derive",
    "monoid",
    "histogram",
    "async",
] }
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.0"

[dev-dependencies]
relentless-http-dev-server = { path = "../dev/server/http" }
axum = "0.8.1"
glob = "0.3.2"
assert-json-diff = "2.0.2"
httptest = "0.16.3"
indoc = "2.0.6"
tokio-test = "0.4.4"                                         # for async doc test
