[package]
name = "relentless"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[features]
default = ["full"]
full = ["json", "yaml", "cli"]

json = ["serde_json", "json-patch", "jsonptr"]
yaml = ["serde_yaml"]
cli = ["clap", "console-report"]
console-report = ["console"]
testing = []


[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
# tokio-stream = "0.1.17" # TODO map of tokio-stream may not collect as Vec<T>Item (it reduce Vec<Future>), so use futures
futures = "0.3.31"
tower = { version = "0.5.2", features = ["timeout", "util"] }
trait-variant = "0.1.2"
http = "1.3.1"
http-serde = "2.1.1"
bytes = "1.10.1"
pin-project = "1.1.10"

thiserror = "2.0.12"                                   # TODO
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
json-patch = { version = "4.0.0", optional = true }
jsonptr = { version = "0.7.1", optional = true }

clap = { version = "4.5.40", features = ["derive", "env"], optional = true }
console = { version = "0.15.11", optional = true }
nom = "8.0.0"
bytesize = "2.3.1"
# average = "0.15.1" # Quantile (that use p2 algorithm) do not impl Extend
hdrhistogram = "7.5.4"
# semigroup = { version = "0.4.3", features = ["derive", "monoid", "histogram"] }
semigroup = { git = "https://github.com/hayas1/semigroup.git", branch = "master", features = [
    "derive",
    "monoid",
    "histogram",
    "async",
] }

tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"

[dev-dependencies]
relentless = { path = ".", features = ["testing"] }
axum = "0.8.1"
glob = "0.3.2"
httptest = "0.16.3"
http-body-util = "0.1.3"
assert-json-diff = "2.0.2"
serde_json = "1.0.140"
indoc = "2.0.6"
