[package]
name = "relentless-graphql-dev-server"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

[dependencies]
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
async-stream = "0.3.6"
axum = "0.8.1"
futures = "0.3.31"
once_cell = "1.20.3"
slab = "0.4.9"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
