[package]
name = "relentless-grpc-dev-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
prost = "0.14.0"
prost-types = "0.14.0"
tonic = "0.13.1"
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"
tower = "0.5.2"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

num = "0.4.3"
thiserror = "2.0.12"

[build-dependencies]
tonic-build = "0.13.1"

[lints.clippy]
result_large_err = "allow" # TODO https://github.com/hyperium/tonic/issues/2253
