[package]
name = "relentless-grpc-dev-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
tonic = "0.13.1"
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"
tower = "0.5.2"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

num = "0.4.3"
thiserror = "2.0.17"

[build-dependencies]
tonic-build = "0.14.2"

[lints.clippy]
result_large_err = "allow" # TODO https://github.com/hyperium/tonic/issues/2253
