[package]
name = "relentless-grpc-dev-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-health = "0.14.5"
tonic-reflection = "0.14.5"
tower = "0.5.2"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tonic-tracing-opentelemetry = "0.32.1"
init-tracing-opentelemetry = { version = "0.34.0", features = [
    "tracing_subscriber_ext",
] }

num = "0.4.3"
thiserror = "2.0.12"
clap = { version = "4.5.53", features = ["env", "derive"] }
rand = "0.9.1"
rand_distr = "0.5.1"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[lints.clippy]
result_large_err = "allow" # TODO https://github.com/hyperium/tonic/issues/2253
