[package]
name = "example-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
http-serde = "2.1.1"
num = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
